# VoidPathED

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/api/: client.rs  error.rs  mod.rs  utils.rs
src/api/models/: mod.rs  route.rs  stations.rs  trade.rs
src/core/: mod.rs  settings.rs  utils.rs
src/core/models/: settings.rs
src/ui/: app.slint  init.slint  main.slint
